# aom-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: aom.yml
aom-sys/: .gitignore  Cargo.toml  build.rs
aom-sys/data/: accounting.h  aom.h  inspection.h
aom-sys/src/: lib.rs
src/: common.rs  decoder.rs  encoder.rs  encoder_config.rs  lib.rs
