[package]
name = "libaom"
version = "0.3.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
edition = "2021"
description = "libaom bindings"
repository = "https://github.com/rust-av/aom-rs"
readme = "README.md"
keywords = ["libaom","av1"]

[features]
default = ["codec-trait"]
codec-trait = ["av-codec"]
build = ["aom-sys/build_sources"]

[dependencies]
aom-sys = { version = "0.3.1", path = "aom-sys" }
av-data = "0.4.1"
av-codec = { version = "0.3.0", optional = true }

[workspace]
members = ["aom-sys"]

[dev-dependencies]
regex ="1.3"
