[package]
name = "aom-sys"
version = "0.2.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to aom"
repository = "https://github.com/rust-av/aom-rs"
edition = "2018"
build = "build.rs"

[package.metadata.system-deps]
aom = "2.0.0"

[features]
build_sources = []

[build-dependencies]
bindgen = "0.56"
system-deps = "3.1"

[dependencies]
