[package]
name = "aom-sys"
version = "0.3.3"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to aom"
repository = "https://github.com/rust-av/aom-rs"
edition = "2021"
build = "build.rs"
readme = "../README.md"

[package.metadata.system-deps]
aom = "3.0.0"

[features]
build_sources = []

[build-dependencies]
bindgen = "0.69.1"
system-deps = "6.0"

[dependencies]
